src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisample_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisample_StringErrorContext.class */
public final class ARBTextureMultisample_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTexImage2DMultisample(IIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisampleErrorContext");
        methods.put("glTexImage3DMultisample(IIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisampleErrorContext");
        methods.put("nglGetMultisamplefv(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisampleErrorContext");
        methods.put("glGetMultisamplefv(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisampleErrorContext");
        methods.put("glGetMultisamplef(II)F", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisampleErrorContext");
        methods.put("glSampleMaski(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisampleErrorContext");
        methods.put("glGetMultisamplefv(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureMultisampleErrorContext");
        return methods;
    }
}
